Playbook initial commits

--- a/import_all_credentials_ssh.yml
+++ b/import_all_credentials_ssh.yml
@@ -1,21 +1,23 @@
 ---
-- name: Import Credentials into Ansible Automation Platform
-  hosts: localhost
+- name: Import All Credentials into Ansible Automation Platform (SSH)
+  hosts: localhost  # Playbook runs on your workstation
   gather_facts: false
-  become: false  # We'll use awx-manage, which handles privileges.
+  become: false  # Not needed for the initial tasks
   vars:
-    credential_file: ""  # Placeholder, must be defined when calling.
+    credential_file: ""  # Placeholder - MUST be defined.
+    awx_controller: ""  # Hostname or IP of your AWX/AAP controller
+    awx_ssh_user: "" #  SSH User
     duplicates: []
     imported_count: 0
 
   tasks:
-    - name: Check if credential file exists
+    - name: Check if credential file exists (on local workstation)
       ansible.builtin.stat:
         path: "{{ credential_file }}"
       register: file_check
       failed_when: not file_check.stat.exists
 
-    - name: Read credentials from JSON file
+    - name: Read credentials from JSON file (on local workstation)
       ansible.builtin.slurp:
         src: "{{ credential_file }}"
       register: creds_json_content
@@ -24,8 +26,8 @@
       ansible.builtin.set_fact:
         creds_data: "{{ creds_json_content.content | b64decode | from_json }}"
 
-    - name: Import credentials iteratively
-      ansible.builtin.include_tasks: import_single_credential.yml
+    - name: Iterate through credentials (delegated tasks)
+      ansible.builtin.include_tasks: import_single_credential_ssh.yml
       loop: "{{ creds_data }}"
       loop_control:
         loop_var: cred_data
@@ -35,9 +37,9 @@
         msg:
           - "Imported {{ imported_count }} credentials."
           - "Skipped (duplicates): {{ duplicates }}"
-      when: duplicates|length > 0
+      when: duplicates | length > 0
 
-    - name: Report successful import
+    - name: Report successful import (no duplicates)
       ansible.builtin.debug:
         msg: "Imported {{ imported_count }} credentials."
-      when: duplicates|length == 0
+      when: duplicates | length == 0
