--- a/aapCredsManagementPlaybook.yml
+++ b/aapCredsManagementPlaybook.yml
@@ -3,10 +3,12 @@
   hosts: "{{ source_host | default('sourcesys') }}"
   become: yes
   gather_facts: no
+  collections:
+    - community.general
   vars:
-    # Local file paths on the control node
+    # Local file path on the control node for the exported credentials
     export_file: "./exported_creds.json"
-    # Command to retrieve credentials from AWX via shell_plus.
+    # Command to retrieve credentials from AWX via shell_plus
     awx_export_command: >
       awx-manage shell_plus --quiet --command "from awx.main.models import Credential; import json; print(json.dumps([{'id': c.id, 'name': c.name, 'credential_type': c.credential_type.name, 'inputs': c.inputs} for c in Credential.objects.all()]))"
   tasks:
@@ -111,6 +113,8 @@
 - name: Print final credentials report
   hosts: localhost
   gather_facts: no
+  collections:
+    - community.general
   tasks:
     - name: Display credentials export/import report
       debug:
