--- a/aapCredsManagementPlaybook.yml
+++ b/aapCredsManagementPlaybook.yml
@@ -6,9 +6,9 @@
   collections:
     - community.general
   vars:
-    # Local file path on the control node for the exported credentials
+    # Local file path on the control node for the exported credentials.
     export_file: "./exported_creds.json"
-    # Command to retrieve credentials from AWX via shell_plus
+    # Command to retrieve credentials from AWX via shell_plus.
     awx_export_command: >
       awx-manage shell_plus --quiet --command "from awx.main.models import Credential; import json; print(json.dumps([{'id': c.id, 'name': c.name, 'credential_type': c.credential_type.name, 'inputs': c.inputs} for c in Credential.objects.all()]))"
   tasks:
@@ -26,20 +26,16 @@
       set_fact:
         creds_json: "{{ awx_creds.stdout | from_json | to_nice_json }}"
 
-    - name: Save decrypted credentials to local file
+    - name: Save credentials to local file
       delegate_to: localhost
       copy:
         dest: "{{ export_file }}"
         content: "{{ creds_json }}"
       run_once: true
 
-    - name: Encrypt the exported credentials file with Ansible Vault
+    - name: Encrypt the exported credentials file with ansible-vault CLI
       delegate_to: localhost
-      community.general.ansible_vault:
-        src: "{{ export_file }}"
-        dest: "{{ export_file }}"
-        vault_password_file: "{{ vault_password_file }}"
-        state: encrypt
+      shell: ansible-vault encrypt {{ export_file }} --vault-password-file {{ vault_password_file }} --force
       run_once: true
 
     - name: Record export report (credential names exported)
@@ -57,11 +53,7 @@
       block:
         - name: Decrypt the exported credentials file for import (on localhost)
           delegate_to: localhost
-          community.general.ansible_vault:
-            src: "{{ export_file }}"
-            dest: "./decrypted_creds.json"
-            vault_password_file: "{{ vault_password_file }}"
-            state: decrypt
+          shell: ansible-vault decrypt {{ export_file }} --vault-password-file {{ vault_password_file }} --output=./decrypted_creds.json
           run_once: true
 
         - name: Copy decrypted credentials file to destination host
