--- a/aapCredsManagementPlaybook.yml
+++ b/aapCredsManagementPlaybook.yml
@@ -6,9 +6,9 @@
   collections:
     - community.general
   vars:
-    # Local file path on the control node for the exported credentials.
+    # Use an absolute path for the exported file
     export_file: "/tmp/exported_creds.json"
-    # Command to retrieve credentials from AWX via shell_plus.
+    # Command to retrieve credentials from AWX via shell_plus
     awx_export_command: >
       awx-manage shell_plus --quiet --command "from awx.main.models import Credential; import json; print(json.dumps([{'id': c.id, 'name': c.name, 'credential_type': c.credential_type.name, 'inputs': c.inputs} for c in Credential.objects.all()]))"
   tasks:
@@ -32,21 +32,23 @@
       run_once: true
 
     - name: Save credentials to local file
-      local_action:
-        module: copy
+      delegate_to: localhost
+      connection: local
+      ansible.builtin.copy:
         dest: "{{ export_file }}"
         content: "{{ creds_json }}"
       run_once: true
 
     - name: Encrypt the exported credentials file with ansible-vault CLI
-      local_action:
-        module: shell
-        cmd: "ansible-vault encrypt {{ export_file }} --vault-password-file {{ vault_password_file }} --force"
+      delegate_to: localhost
+      connection: local
+      shell: ansible-vault encrypt {{ export_file }} --vault-password-file {{ vault_password_file }} --force
       run_once: true
 
     - name: Record export report (credential names exported)
-      local_action:
-        module: set_fact
+      delegate_to: localhost
+      connection: local
+      ansible.builtin.set_fact:
         export_report: "{{ {'exported': (creds_json | from_json | map(attribute='name') | list), 'skipped': []} }}"
       run_once: true
 
@@ -58,9 +60,9 @@
       tags: import
       block:
         - name: Decrypt the exported credentials file for import (on localhost)
-          local_action:
-            module: shell
-            cmd: "ansible-vault decrypt {{ export_file }} --vault-password-file {{ vault_password_file }} --output=/tmp/decrypted_creds.json"
+          delegate_to: localhost
+          connection: local
+          shell: ansible-vault decrypt {{ export_file }} --vault-password-file {{ vault_password_file }} --output=/tmp/decrypted_creds.json
           run_once: true
 
         - name: Copy decrypted credentials file to destination host
@@ -90,8 +92,9 @@
           register: import_command_result
 
         - name: Set import report fact from command output
-          local_action:
-            module: set_fact
+          delegate_to: localhost
+          connection: local
+          ansible.builtin.set_fact:
             import_report: "{{ import_command_result.stdout | from_json }}"
           run_once: true
 
@@ -103,8 +106,9 @@
           become: yes
 
         - name: Remove decrypted credentials file on control node
-          local_action:
-            module: file
+          delegate_to: localhost
+          connection: local
+          ansible.builtin.file:
             path: "/tmp/decrypted_creds.json"
             state: absent
           run_once: true
