--- a/aapCredsManagementPlaybook2.yml
+++ b/aapCredsManagementPlaybook2.yml
@@ -7,30 +7,9 @@
     - community.general
   vars:
     export_file: "/tmp/exported_creds.json"
-    # Extended Python snippet that retrieves various models and decrypts secret fields.
+    # Single-line Python snippet for AWX shell_plus:
     awx_export_command: >
-      awx-manage shell_plus --quiet --command 'from awx.main.models import Credential, CredentialType, Organization, Project, JobTemplate, Team, Role, User; from awx.main.utils.encryption import decrypt_value; import json; SECRET_FIELDS = ["password", "ssh_key_data", "ssh_key_unlock", "become_password", "vault_password", "authorize_password", "secret", "secret_key", "security_token"]; 
-      def decrypt_inputs(inputs):
-          d = {};
-          for k, v in inputs.items():
-              if k in SECRET_FIELDS and isinstance(v, str) and v.startswith("$encrypted$"):
-                  try:
-                      d[k] = decrypt_value(v)
-                  except Exception:
-                      d[k] = v
-              else:
-                  d[k] = v;
-          return d;
-      output = {};
-      output["credentials"] = [{"id": c.id, "name": c.name, "credential_type": c.credential_type.name, "inputs": decrypt_inputs(c.inputs)} for c in Credential.objects.all()];
-      output["credential_types"] = [{"id": ct.id, "name": ct.name} for ct in CredentialType.objects.all()];
-      output["organizations"] = [{"id": org.id, "name": org.name} for org in Organization.objects.all()];
-      output["projects"] = [{"id": p.id, "name": p.name} for p in Project.objects.all()];
-      output["job_templates"] = [{"id": jt.id, "name": jt.name} for jt in JobTemplate.objects.all()];
-      output["teams"] = [{"id": t.id, "name": t.name} for t in Team.objects.all()];
-      output["roles"] = [{"id": r.id, "name": r.name} for r in Role.objects.all()];
-      output["users"] = [{"id": u.id, "username": u.username} for u in User.objects.all()];
-      print(json.dumps(output))'
+      awx-manage shell_plus --quiet --command "import json; from awx.main.models import Credential, CredentialType, Organization, Project, JobTemplate, Team, Role, User; from awx.main.utils.encryption import decrypt_value; SECRET_FIELDS=[\"password\",\"ssh_key_data\",\"ssh_key_unlock\",\"become_password\",\"vault_password\",\"authorize_password\",\"secret\",\"secret_key\",\"security_token\"]; def decrypt_inputs(inputs): return {k:(decrypt_value(v) if (k in SECRET_FIELDS and isinstance(v, str) and v.startswith(\"$encrypted$\")) else v) for k, v in inputs.items()}; output={\"credentials\":[{\"id\":c.id, \"name\":c.name, \"credential_type\":c.credential_type.name, \"inputs\":decrypt_inputs(c.inputs)} for c in Credential.objects.all()], \"credential_types\":[{\"id\":ct.id, \"name\":ct.name} for ct in CredentialType.objects.all()], \"organizations\":[{\"id\":org.id, \"name\":org.name} for org in Organization.objects.all()], \"projects\":[{\"id\":p.id, \"name\":p.name} for p in Project.objects.all()], \"job_templates\":[{\"id\":jt.id, \"name\":jt.name} for jt in JobTemplate.objects.all()], \"teams\":[{\"id\":t.id, \"name\":t.name} for t in Team.objects.all()], \"roles\":[{\"id\":r.id, \"name\":r.name} for r in Role.objects.all()], \"users\":[{\"id\":u.id, \"username\":u.username} for u in User.objects.all()]}; print(json.dumps(output))"
   tasks:
     - name: Retrieve AWX objects using awx-manage shell_plus
       shell: "{{ awx_export_command }}"
@@ -119,21 +98,17 @@
           delegate_to: "{{ destination_host }}"
           become: yes
           shell: >
-            awx-manage shell_plus --quiet --command "import json;
-            from awx.main.models import Credential, CredentialType, Organization, Project, JobTemplate, Team, Role, User;
+            awx-manage shell_plus --quiet --command "import json; from awx.main.models import Credential, CredentialType, Organization, Project, JobTemplate, Team, Role, User; 
             with open('/tmp/new_export.json') as f:
                 data = json.load(f);
-            imported = [];
-            skipped = [];
-            # Import credentials (skip duplicates)
+            imported = []; skipped = [];
             for cred in data.get('credentials', []):
                 if not Credential.objects.filter(name=cred['name']).exists():
-                    ct = CredentialType.objects.get(name=cred['credential_type'])
+                    ct = CredentialType.objects.get(name=cred['credential_type']);
                     Credential.objects.create(name=cred['name'], credential_type=ct, inputs=cred['inputs']);
                     imported.append(cred['name']);
                 else:
                     skipped.append(cred['name']);
-            # You can extend similar logic for other models if desired.
             print(json.dumps({'imported': imported, 'skipped': skipped}))"
           register: import_command_result
 
