--- a/aapCredsManagementPlaybook2.yml
+++ b/aapCredsManagementPlaybook2.yml
@@ -7,9 +7,11 @@
     - community.general
   vars:
     export_file: "/tmp/exported_creds.json"
-    # The AWX export command is now using a lambda for decrypt_inputs.
+    # Updated inline Python snippet:
+    # - Uses a lambda for decrypt_inputs.
+    # - Calls decrypt_value(v, None) so that two arguments are passed.
     awx_export_command: >
-      awx-manage shell_plus --quiet --command 'import json; from awx.main.models import Credential, CredentialType, Organization, Project, JobTemplate, Team, Role, User; from awx.main.utils.encryption import decrypt_value; SECRET_FIELDS=["password","ssh_key_data","ssh_key_unlock","become_password","vault_password","authorize_password","secret","secret_key","security_token"]; decrypt_inputs=lambda inputs: {k:(decrypt_value(v) if (k in SECRET_FIELDS and isinstance(v, str) and v.startswith("$encrypted$")) else v) for k,v in inputs.items()}; output={"credentials":[{"id":c.id, "name":c.name, "credential_type":c.credential_type.name, "inputs":decrypt_inputs(c.inputs)} for c in Credential.objects.all()], "credential_types":[{"id":ct.id, "name":ct.name} for ct in CredentialType.objects.all()], "organizations":[{"id":org.id, "name":org.name} for org in Organization.objects.all()], "projects":[{"id":p.id, "name":p.name} for p in Project.objects.all()], "job_templates":[{"id":jt.id, "name":jt.name} for jt in JobTemplate.objects.all()], "teams":[{"id":t.id, "name":t.name} for t in Team.objects.all()], "roles":[{"id":r.id, "name":r.name} for r in Role.objects.all()], "users":[{"id":u.id, "username":u.username} for u in User.objects.all()]}; print(json.dumps(output))'
+      awx-manage shell_plus --quiet --command 'import json; from awx.main.models import Credential, CredentialType, Organization, Project, JobTemplate, Team, Role, User; from awx.main.utils.encryption import decrypt_value; SECRET_FIELDS=["password","ssh_key_data","ssh_key_unlock","become_password","vault_password","authorize_password","secret","secret_key","security_token"]; decrypt_inputs=lambda inputs: {k:(decrypt_value(v, None) if (k in SECRET_FIELDS and isinstance(v, str) and v.startswith("$encrypted$")) else v) for k,v in inputs.items()}; output={"credentials":[{"id":c.id, "name":c.name, "credential_type":c.credential_type.name, "inputs":decrypt_inputs(c.inputs)} for c in Credential.objects.all()], "credential_types":[{"id":ct.id, "name":ct.name} for ct in CredentialType.objects.all()], "organizations":[{"id":org.id, "name":org.name} for org in Organization.objects.all()], "projects":[{"id":p.id, "name":p.name} for p in Project.objects.all()], "job_templates":[{"id":jt.id, "name":jt.name} for jt in JobTemplate.objects.all()], "teams":[{"id":t.id, "name":t.name} for t in Team.objects.all()], "roles":[{"id":r.id, "name":r.name} for r in Role.objects.all()], "users":[{"id":u.id, "username":u.username} for u in User.objects.all()]}; print(json.dumps(output))'
   tasks:
     - name: Retrieve AWX objects using awx-manage shell_plus
       shell: "{{ awx_export_command }}"
@@ -147,7 +149,7 @@
         msg: |
           === Final Report ===
           Exported Credentials: {{ export_report.exported | default([]) }}
-          Imported Credentials: {{ import_report.imported | default('None') }}
+          Imported Credentials: {{ import_report.imported | default("None") }}
           {% if (export_report.skipped | default([])) | length > 0 %}
           Skipped on export: {{ export_report.skipped | default([]) }}
           {% endif %}
